fixed article title and description alignment issues with thumbnail image

--- a/assets/style.css
+++ b/assets/style.css
@@ -30,6 +30,11 @@ img {
     object-fit: cover;
 }
 
+.card-content {
+    padding-top: 20px !important;
+    
+}
+
 .card-image {
     height: 200px;
     width: 200px;
@@ -51,7 +56,7 @@ img {
 }
 
 .header {
-    padding-top: 0px !important;
+    margin-top: 0px !important;
 }
 
 /*
